--- a/index.html
+++ b/index.html
@@ -4,26 +4,16 @@
   <meta charset="UTF-8" />
   <title>Curso de Introdução às PICS e Autocuidado</title>
   <style>
-    <style>
     body {
-  background: #dfece5;
-  font-family: 'Segoe UI', sans-serif;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center; /* ← centraliza também na vertical */
-  min-height: 100vh;
-  perspective: 1200px;
-  padding: 40px 0; /* opcional: cria espaço superior e inferior */
-}
-
-    .scene {
-      width: 360px;
-      height: 580px;
-      position: relative;
-      transform-style: preserve-3d;
-      margin-top: 0px; /* << ADD THIS: Adjust 60px to your desired space */
-      margin-bottom: 40px; /* << Optional: Adds space below the card */
+      background: #dfece5;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      perspective: 1200px;
+      padding: 40px 0;
     }
 
     .scene {
@@ -31,7 +21,6 @@
       height: 580px;
       position: relative;
       transform-style: preserve-3d;
-margin: auto
     }
 
     .card {
@@ -134,21 +123,22 @@ margin: auto
       display: none;
     }
 
-.footer {
-  text-align: center;
-  font-size: 0.9em;
-  font-weight: bold;
-  color: white;
-  background-color: #388e3c;
-  padding: 8px 15px 6px 15px; /* top, right, bottom, left */
-  font-style: normal;
-  border-top: 1px solid #2e7d32;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  line-height: 1.3em;
-  box-sizing: border-box;
-  overflow-wrap: break-word;
-}
+    .footer {
+      text-align: center;
+      font-size: 0.9em;
+      font-weight: bold;
+      color: white;
+      background-color: #388e3c;
+      padding: 8px 15px 6px 15px;
+      font-style: normal;
+      border-top: 1px solid #2e7d32;
+      border-bottom-left-radius: 25px;
+      border-bottom-right-radius: 25px;
+      line-height: 1.3em;
+      box-sizing: border-box;
+      overflow-wrap: break-word;
+    }
+
     .progresso-container {
       margin-top: 15px;
       text-align: center;
