--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       align-items: center;
       min-height: 100vh;
       perspective: 1200px;
-      padding: 40px 0;
+     padding: 80px 0 40px 0;
     }
 
     .scene {
