--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <title>Curso de Introdução às PICS e Autocuidado</title>
   <style>
     body {
-      background: #dfece5;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      perspective: 1200px;
-      padding: 40px 0;
-    }
+  background: #dfece5;
+  font-family: 'Segoe UI', sans-serif;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: start; /* ← agora alinha no topo */
+  min-height: 100vh;
+  perspective: 1200px;
+  padding: 20px 0 40px; /* topo menor, base maior */
+}
 
     .scene {
       width: 90vw;
