--- a/index.html
+++ b/index.html
@@ -18,27 +18,21 @@
 }
 
     .scene {
-      width: 90vw;
-      max-width: 360px;
-      height: 90vh;
-      max-height: 580px;
-      position: relative;
-      transform-style: preserve-3d;
-      margin: auto;
-    }
+  width: 90vw;
+  max-width: 360px;
+  position: relative;
+  transform-style: preserve-3d;
+  margin: 0 auto;
 
     .card {
-      width: 100%;
-      height: 100%;
-      border-radius: 25px;
-      background: #ffffff;
-      box-shadow: inset 0 0 10px rgba(0,0,0,0.1), 8px 8px 16px rgba(0,0,0,0.15), -4px -4px 12px rgba(255,255,255,0.8);
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform-style: preserve-3d;
-      transition: transform 0.6s ease;
-    }
+  width: 100%;
+  border-radius: 25px;
+  background: #ffffff;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.1), 8px 8px 16px rgba(0,0,0,0.15), -4px -4px 12px rgba(255,255,255,0.8);
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s ease;
+}
 
     .card:hover {
       box-shadow: 12px 12px 24px rgba(0,0,0,0.2), -6px -6px 16px rgba(255,255,255,0.9);
