--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
       min-height: 100vh;
       perspective: 1200px;
       padding: 20px 0 40px;
+      overflow-x: hidden;
     }
 
     .scene {
-      width: 90vw;
-      max-width: 360px;
+      width: 95vw;
+      max-width: 400px;
       height: 90vh;
-      max-height: 580px;
+      max-height: 620px;
       position: relative;
       transform-style: preserve-3d;
       margin: auto;
@@ -56,16 +57,12 @@
       justify-content: space-between;
     }
 
-    .front {
+    .front, .back {
       background: #fff;
     }
 
     .back {
-      background: #fff;
       transform: rotateY(180deg);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
     }
 
     .card-header {
@@ -86,6 +83,8 @@
       background: url('https://i.postimg.cc/4dPGwJpp/pnpic.png') center/cover no-repeat;
       background-color: #ffffffee;
       background-blend-mode: lighten;
+      flex: 1;
+      overflow-y: auto;
     }
 
     .card-content h3 {
@@ -188,19 +187,21 @@
       z-index: 999;
       left: 0;
       top: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       background: rgba(0, 0, 0, 0.6);
       justify-content: center;
       align-items: center;
       pointer-events: none;
+      padding: 10px;
     }
 
     .modal-content {
       background: #fff;
-      width: 90%;
+      width: 100%;
       max-width: 800px;
-      height: 80vh;
+      max-height: 90vh;
+      height: 100%;
       border-radius: 15px;
       overflow: hidden;
       position: relative;
@@ -246,13 +247,18 @@
     }
 
     @media (max-width: 480px) {
+      .scene {
+        max-width: 100%;
+        height: 95vh;
+      }
+
       .card-header {
         font-size: 1em;
         padding: 15px;
       }
 
       .card-content {
-        padding: 15px;
+        padding: 12px;
       }
 
       .card-content a {
@@ -262,6 +268,11 @@
       .footer {
         font-size: 0.8em;
         padding: 6px 10px;
+      }
+
+      .modal-content {
+        height: 90vh;
+        border-radius: 10px;
       }
     }
   </style>
