--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
     }
 
     .card-content {
-      padding: 20px;
-    }
+  padding: 20px;
+  background: url('https://i.postimg.cc/4dPGwJpp/pnpic.png') center/cover no-repeat;
+  background-color: #ffffffee;
+  background-blend-mode: lighten;
+}
 
     .card-content h3 {
       font-size: 1em;
