--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </div>
       <div class="card-content">
         <div style="text-align:center; margin-top:5px;">
-          <a href="https://forms.gle/sNEoGfCSbRgd2fio8" target="_blank" class="pulse-link">Inscreva-se</a>
+          <a href="https://forms.gle/a1ypBirNWA81rHNy8" target="_blank" class="pulse-link">Inscreva-se</a>
         </div>
         <h3>Explore os módulos:</h3>
         <div class="divider"></div>
