--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           Assista aos vídeos da trilha completa do curso diretamente aqui no verso do cartão.
         </div>
         <div style="text-align:center; margin-top:12px;">
-          <a href="https://forms.gle/sNEoGfCSbRgd2fio8" target="_blank" class="pulse-link">Inscreva-se</a>
+          <a href="https://forms.gle/VxK78vLgXqwBbgbd8" target="_blank" class="pulse-link">Inscreva-se</a>
         </div>
       </div>
       <div class="footer">Práticas Integrativas em destaque no SUS 💚</div>
