--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </div>
       <div class="card-content">
         <div style="text-align:center; margin-top:5px;">
-          <a href="https://forms.gle/a1ypBirNWA81rHNy8" target="_blank" class="pulse-link">Inscreva-se</a>
+          Inscreva-se 
         </div>
         <h3>Explore os módulos:</h3>
         <div class="divider"></div>
@@ -312,7 +312,7 @@
           Assista aos vídeos da trilha completa do curso diretamente aqui no verso do cartão.
         </div>
         <div style="text-align:center; margin-top:12px;">
-          <a href="https://forms.gle/VxK78vLgXqwBbgbd8" target="_blank" class="pulse-link">Inscreva-se</a>
+          Inscreva-se
         </div>
       </div>
       <div class="footer">Práticas Integrativas em destaque no SUS 💚</div>
